--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-08-01 15:26:04
+lastsearch = 2024-08-01 20:32:16
 
 [www.tui.co.uk]
-match = 0.0%%
-title = Buy South Korean won
-url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
+match = -233.3%%
+title = Holiday Destinations & Inspiration 2024 / 2025
+url = https://www.tui.co.uk/destinations/holiday-destinations
 
 [uk.trip.com]
 match = 0.0%%
@@ -112,9 +112,9 @@ title = All Bags | DeMellier | Shop now
 url = https://demellierlondon.com/collections/all-bags
 
 [www.telegraph.co.uk]
-match = -200.0%%
-title = The 20 best TV travel shows ever – ranked
-url = https://www.telegraph.co.uk/tv/0/best-tv-travel-shows-all-time-ranked/
+match = -333.3%%
+title = Olympics canoe slalom: Joe Clarke goes for gold for Team ...
+url = https://www.telegraph.co.uk/olympics/2024/08/01/olympics-canoe-slalom-live-joe-clarke-latest-paris-2024/
 
 [www.oneworld.com]
 match = -283.3%%
@@ -415,4 +415,14 @@ url = https://mw.linkedin.com/company/tuigroup?trk=public_profile_experience-ite
 match = -91.7%%
 title = Colonel Eric M. Bissonette
 url = https://www.vance.af.mil/About-Us/Biographies/Display/Article/3819572/eric-m-bissonette/
+
+[enterjamaica.com]
+match = -358.3%%
+title = Electronic C5 | Passport Immigration and Citizenship Agency ...
+url = https://enterjamaica.com/
+
+[m.facebook.com]
+match = -108.3%%
+title = Badminton World Federation - BWF
+url = https://m.facebook.com/100020506943005/photos/1451055008921383/
 
