--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-08-01 17:24:33
+lastsearch = 2024-08-01 20:35:06
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -42,9 +42,9 @@ title = https://www.google.com/maps/@10.8519007,106.629377...
 url = https://www.google.com/maps/@10.8519007,106.6293774,16.92z?hl=vi-VN
 
 [m.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://m.facebook.com/phimhaygiare/?locale=bg_BG
+match = -180.0%%
+title = SNAMO - MODEL CASTING CALL Yêu cầu: • Chiều cao: Nữ
+url = https://m.facebook.com/story.php/?story_fbid=758422869638037&id=100064109918683
 
 [dieuhanhgiaothong-sgtvt.hochiminhcity.gov.vn]
 match = -126.7
@@ -249,7 +249,7 @@ url = https://phaata.com/en/zip-code/hanoi-zip-code-the-most-updated-hanoi-posta
 [agasound.vn]
 match = 6.7%%
 title = D2.15 - AGASOUND
-url = https://agasound.vn/d215
+url = https://agasound.vn/d215?p=5
 
 [nhiepanhdoisong.vn]
 match = -246.7%%
@@ -382,8 +382,8 @@ title = Hướng dẫn cách cúng rước ông bà 30 Tết chuẩn, chi tiết
 url = https://dienmaycholon.com/kinh-nghiem-mua-sam/huong-dan-cach-cung-ruoc-ong-ba-30-tet-chuan-chi-tiet
 
 [vietnamese.alibaba.com]
-match = -226.7%%
-title = Bộ Câu Lạc Bộ Golf Dành Cho Phụ Nữ Với Chiều Dài Tùy Chỉnh
+match = -213.3%%
+title = Bộ Câu Lạc Bộ Golf Dành Cho Phụ Nữ Với Chiều Dài Tùy ...
 url = https://vietnamese.alibaba.com/product-detail/Golf-Club-Set-for-Lady-with-1600364285763.html
 
 [www.highlandscoffee.com.vn]
