--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-01 18:31:05
+lastsearch = 2024-08-01 20:26:27
 
 [chieutrucsaigon.com]
 match = 16.7%%
@@ -14,7 +14,7 @@ url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-da
 [demxanh.com]
 match = -8.3%%
 title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html?srsltid=AfmBOoq5bEyLaXSNtLLSm6ciZYxOk0R4Sf0SiVVguKJsA6Zarbp4sM3n
+url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
 
 [chieutrelanlan.com]
 match = -20.8%%
@@ -27,14 +27,14 @@ title = Chiếu Nằm (Chiếu Tre, Chiếu Trúc, Chiếu Cói,..)
 url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-truc-chieu-coi,..).html
 
 [www.facebook.com]
-match = 25.0%%
-title = Chiếu Trúc Tre Việt Nam | Hanoi
-url = https://www.facebook.com/chieutructrevietnam/?locale=vi_VN
+match = 22.2%%
+title = CHIẾU TRE TRÚC HCM
+url = https://www.facebook.com/chieutructot/?locale=vi_VN
 
 [shopee.vn]
-match = 50.0%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = -37.5%%
+title = (100%% ảnh thật) CHIẾU TRÚC HẠT NÂU, HẠT VÀNG ...
+url = https://shopee.vn/(100-ảnh-thật)-CHIẾU-TRÚC-HẠT-NÂU-HẠT-VÀNG-VIỆT-NAM-NGỌC-LÂM-LOẠI-CAO-CẤP-hàng-dày-mắt-đan-khít--i.11240484.4326979150
 
 [www.yellowpages.vn]
 match = -37.5%%
@@ -47,9 +47,9 @@ title = BST CHIẾU TRÚC HẠT ĐEN CHÍNH HÃNG - Hà Nội
 url = https://thegioidemtot.vn/392-chieu-truc-hat-den.html
 
 [www.youtube.com]
-match = 4.2%%
-title = ANTV - Truyền hình Công an Nhân dân
-url = https://www.youtube.com/channel/UCIg56SgvoZF8Qg0Jx_gh6Pg
+match = -12.5%%
+title = Chiếu trúc hạt Hương Trúc hạt vàng chính hãng
+url = https://www.youtube.com/watch?v=cKRmgcCaxk8
 
 [chieutrucxinh.weebly.com]
 match = -70.8%%
