--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-08-01 13:44:58
+lastsearch = 2024-08-01 20:22:20
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -72,9 +72,9 @@ title = IVECO DAILY PLUS – MẪU XE MINI BUS CAO CẤP 16
 url = https://thacoansuonghcm.com/iveco-daily-plus-mau-xe-mini-bus-cao-cap-16-19-cho-1438691.html
 
 [thuvienphapluat.vn]
-match = -95.8%%
-title = Nghị định 16/2022/NĐ-CP quy định xử phạt vi phạm hành ...
-url = https://thuvienphapluat.vn/van-ban/Vi-pham-hanh-chinh/Nghi-dinh-16-2022-ND-CP-quy-dinh-xu-phat-vi-pham-hanh-chinh-ve-xay-dung-502065.aspx
+match = -50.0%%
+title = Thông tư 19/2016/TT-NHNN hoạt động thẻ ngân hàng
+url = https://thuvienphapluat.vn/van-ban/Tien-te-Ngan-hang/Thong-tu-19-2016-TT-NHNN-hoat-dong-the-ngan-hang-316056.aspx
 
 [baocaobang.vn]
 match = -95.8%%
@@ -275,4 +275,9 @@ url = https://tulieuvankien.dangcongsan.vn/he-thong-van-ban/van-ban-cua-dang/ngh
 match = 8.3%%
 title = 19 tập đoàn, tổng công ty nhà nước
 url = https://nhandan.vn/chu-de/19-tap-doan-tong-cong-ty-nha-nuoc-704686.html
+
+[vetau.com.vn]
+match = -87.5%%
+title = Tổng công ty đường sắt Việt Nam - Bán vé tàu trực tuyến
+url = https://vetau.com.vn/
 
