--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-08-01 15:42:29
+lastsearch = 2024-08-01 20:21:16
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Luật Di trú và Cuộc sống Mỹ | BỊ THU HỒI THẺ XANH KHI ..
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -250.0%%
-title = Low-budget GREEN SCREEN at home | What gives the best ...
-url = https://www.youtube.com/watch?v=axwpepx1FTw
+match = -185.7%%
+title = HƯỚNG DẪN CÁCH PHỤC HỒI THẺ XANH SAU KHIỞ VIỆT ...
+url = https://www.youtube.com/watch?v=3ycihnhaARo
 
 [www.reddit.com]
 match = -64.3%%
@@ -32,9 +32,9 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = 0.0%%
-title = 
-url = https://www.uscis.gov/i-90
+match = -50.0%%
+title = Explore my Options | USCIS
+url = https://www.uscis.gov/forms/explore-my-options
 
 [www.evergreenrecreation.com]
 match = -157.1%%
