CI images update

--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-08-01 17:49:54
+lastsearch = 2024-08-01 20:46:24
 
 [shopee.vn]
 match = -76.2%%
@@ -69,7 +69,7 @@ url = https://congtynemthangloi.com/kich-thuoc-giuong-ngu-chuan-pho-bien-hien-na
 [ninhouse.vn]
 match = -76.2%%
 title = Cách tính kích thước ga giường để phù hợp với nệm
-url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem
+url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem?srsltid=AfmBOoqVt-zv-sOQBYbNrLe4DcbQzpryU2mjyh4bcUajHzo7nz-h60Ao
 
 [giuongxep.com]
 match = -57.1%%
@@ -114,7 +114,7 @@ url = https://thangnhomsaigon.com/giuong-xep/
 [noithatduongdong.com]
 match = 23.8%%
 title = Giường sắt 2 tầng -GT16
-url = https://noithatduongdong.com/giuong-sat-2-tang-co-rem-gt16
+url = https://noithatduongdong.com/giuong-sat-2-tang-co-rem-gt16?srsltid=AfmBOooFFvckyJs9W3JHhQFdpouAbDej_A4DAu4_uHXL0RPGIeu-M4hu
 
 [beyours.vn]
 match = 0.0%%
