--- a/images/tham-xop-18/config.ini
+++ b/images/tham-xop-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-xop-18.html
 lastopen = 2024-06-07 00:22:33
 
 [search]
-lastsearch = 2024-08-01 17:41:12
+lastsearch = 2024-08-01 20:51:53
 
 [www.sendo.vn]
 match = 0.0%%
@@ -28,13 +28,13 @@ url = https://thamtretho.com/
 
 [trieuchau.com]
 match = -200.0%%
-title = 30*30*18 tấm - Thảm xốp trải sàn nỉ Âu Lạc
-url = https://trieuchau.com/vi-vn/1057/28066/Tham-Xop-30x30cm/303018-tam--Tham-xop-trai-san-ni-Au-Lac
+title = 30*30*18 tấm - Thảm xốp mặt nỉ ghép Âu Lạc
+url = https://trieuchau.com/vi-vn/1057/28077/Tham-Xop-30x30cm/303018-tam--Tham-xop-mat-ni-ghep-Au-Lac
 
 [www.lazada.vn]
 match = -136.4%%
 title = BỘ 18 MIẾNG THẢM XỐP VÂN GỖ CAO CẤP
-url = https://www.lazada.vn/products/bo-18-mieng-tham-xop-van-go-cao-cap-18-mieng-tham-nhieu-mau-i377144802.html?srsltid=AfmBOorOhMZqaBaduxDXiSQa1faTtxNDKAhfVVpvaHC4BhWk5WCqZyd0
+url = https://www.lazada.vn/products/bo-18-mieng-tham-xop-van-go-cao-cap-18-mieng-tham-nhieu-mau-i377144802.html
 
 [tayphuthuan.com]
 match = -154.5%%
