--- a/images/bo-ga-chun-chan-lua-warmdream-160x200-hq/config.ini
+++ b/images/bo-ga-chun-chan-lua-warmdream-160x200-hq/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-lua-warmdream-160x200-hq.html
 lastopen = 2024-06-09 23:45:27
 
 [search]
-lastsearch = 2024-08-01 20:25:46
+lastsearch = 2024-08-01 20:45:00
 
 [www.diepxuan.com]
 match = 45.0%%
@@ -15,4 +15,9 @@ url = https://www.diepxuan.com/bo-chun-chan-warmdream-160x200-lua.html
 match = -10.0%%
 title = SUAN LUM NIGHT BAZAAR (2024) All You Need to Know ...
 url = https://www.tripadvisor.com.sg/Attraction_Review-g293916-d9606514-Reviews-Suan_Lum_Night_Bazaar-Bangkok.html
+
+[everonvietnam.com]
+match = 2.5%%
+title = Ga Chun Chần | Page 13 Of 16 - Korean Pillows & Blankets
+url = https://everonvietnam.com/en/loai/ga-chun-chan/page/13/
 
