--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-08-01 17:44:20
+lastsearch = 2024-08-01 20:43:57
 
 [www.dem365.vn]
 match = -61.9%%
@@ -17,9 +17,9 @@ title = Chăn phao Poly giá rẻ giá 200k, 250k
 url = https://www.demgiare.net/chan-phao-poly-gia-re.html
 
 [shopee.vn]
-match = -66.7%%
-title = Bộ chăn phao - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/bộ chăn phao
+match = -114.3%%
+title = Chăn phao trần bông dày loại 1 bông hơi siêu nhẹ cao cấp ...
+url = https://shopee.vn/Chăn-phao-trần-bông-dày-loại-1-bông-hơi-siêu-nhẹ-cao-cấp-được-chọn-màu-i.78513158.5470278231
 
 [suongtuyet.com]
 match = 28.6%%
@@ -37,9 +37,9 @@ title = Tại sao chặn phao cần 4 hạt chặn? Và trải nghiệm thực t
 url = https://www.youtube.com/watch?v=ZjibqQJbDZY
 
 [www.lazada.vn]
-match = -33.3%%
-title = Chăn Phao Siêu Nhẹ Mùa đông Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/chan-phao-sieu-nhe-mua-dong/
+match = -109.5%%
+title = Chăn phao trần bông dày loại 1 bông hơi siêu nhẹ 1m8- ...
+url = https://www.lazada.vn/products/chan-phao-tran-bong-day-loai-1-bong-hoi-sieu-nhe-1m8-2m-cao-cap-duoc-chon-mau-i1433339880.html
 
 [docauquanghuy.com]
 match = -33.3%%
