--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-08-01 17:40:09
+lastsearch = 2024-08-01 20:52:15
 
 [demxanh.com]
-match = -14.8%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 22.2%%
+title = Chiếu điều hòa cao su non đa sắc tím than
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html
 
 [shopee.vn]
 match = 18.5%%
@@ -18,13 +18,13 @@ url = https://shopee.vn/list/chiếu điều hòa
 
 [goni.vn]
 match = 18.5%%
-title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
+title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [russo.vn]
-match = -37.0%%
-title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
-url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
+match = 29.6%%
+title = Chiếu điều hòa cao su non 1m8x2m - Russo
+url = https://russo.vn/chieu-dieu-hoa-cao-su-1m8x2m/
 
 [www.dienmayxanh.com]
 match = -48.1%%
