--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-08-01 19:26:17
+lastsearch = 2024-08-01 20:49:48
 
 [chieutrelanlan.com]
 match = -41.7%%
@@ -77,9 +77,9 @@ title = Bảng giá các kích thước đệm bông ép Everon vỏ gấm ...
 url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 
 [demxanh.com]
-match = 25.0%%
-title = Chiếu trúc hạt Hương Trúc nâu cà phê
-url = https://demxanh.com/chieu-truc-hat-huong-truc-nau.html?srsltid=AfmBOoptZTCT7BTyYOF83h_KHM_GQfr70GWYFLvhwD8fiyXT-bYr6FE7
+match = -45.8%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOopm3gFoYJ8E2SmXOhnzG2Nnf3xn5U_yhZ-IN0f1XVy-VkOmKxE4
 
 [www.diepxuan.com]
 match = 100.0%%
