--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-08-01 15:28:09
+lastsearch = 2024-08-01 20:53:35
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -22,8 +22,8 @@ title = Bộ Chăn Ga Gối 5 Món BRANIO 180 x 200 cm
 url = https://shopee.vn/search?keyword=Bộ Chăn Ga Gối 5 Món BRANIO 180 x 200 cm
 
 [congtynemthangloi.com]
-match = -72.0%%
-title = Review TOP ga giường Thắng Lợi được yêu thích nhất hiện nay
+match = -52.0%%
+title = Review TOP ga giường Thắng Lợi được yêu thích nhất ...
 url = https://congtynemthangloi.com/review-ga-giuong-thang-loi
 
 [nemtotgiare.com]
@@ -42,9 +42,9 @@ title = Ga chun tiện lợi và thoáng mát, chính hãng giảm 15%%
 url = https://nemhana.com/ga-chun/
 
 [demxanh.com]
-match = 4.0%%
-title = Bộ ga chun Cotton chống thấm màu trắng
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-trang.html
+match = -4.0%%
+title = Bộ ga chun Cotton chống thấm màu xanh đậm
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
 
 [www.lazada.vn]
 match = 0.0%%
