--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-08-01 20:30:52
+lastsearch = 2024-08-01 20:46:45
 
 [www.lazada.vn]
 match = -111.1%%
 title = Nem Cua Bể Đặc Sản Hải Phòng khay 12 cái Thơm ngon
-url = https://www.lazada.vn/products/nem-cua-be-dac-san-hai-phong-khay-12-cai-thom-ngon-i1960185476.html?srsltid=AfmBOop-9VdKwdvTCmLtU9Hsi_EnMbiTpGWxzm2Sx3ePxZfHxMjNfNiu
+url = https://www.lazada.vn/products/nem-cua-be-dac-san-hai-phong-khay-12-cai-thom-ngon-i1960185476.html
 
 [www.coastpneumatics.com]
 match = -116.7%%
@@ -59,7 +59,7 @@ url = https://www.instagram.com/huuloc861/
 [www.diepxuan.com]
 match = -111.1%%
 title = Điệp Xuân Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html?srsltid=AfmBOoqbMQrLWLdOtSS80c1YxNKnLYSH-eqQaEDNuNTpg7oZVS8AYIqZ
+url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 
 [nemphuoclong.vn]
 match = -83.3%%
