--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 lastopen = 2024-06-07 00:35:43
 
 [search]
-lastsearch = 2024-08-01 17:59:58
+lastsearch = 2024-08-01 20:45:21
 
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html
+url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOoo-Rj0QFvtPwLuTxJjiVfOzA3GkSnXgVm2oSHmay-s6HpL8-mfg
 
 [www.lazada.vn]
-match = -117.4%%
-title = Thảm Lì Bali - Thảm Trải Sàn Nhập Khẩu 100%% Cao Cấp, Sang ...
-url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-100-cao-cap-sang-trong-120x160cm-160x230cm-trang-tri-phong-khach-phong-ngu-chup-hinhvv-i1557646010-s11108591003.html?from_gmc=1&fl_tag=1
+match = -78.3%%
+title = Thảm Trải Sàn 100%% Nhập Khẩu Cao Cấp, Sang Trọng ...
+url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html?srsltid=AfmBOoo-OPitos9umvP9KyAFWyKHTxoTuMyX1Jr3BeH2QHigAOQlXSsO
 
 [tiki.vn]
 match = -47.8%%
