--- a/images/tui-singapore-150x190x09/config.ini
+++ b/images/tui-singapore-150x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore-150x190x09.html
 lastopen = 2024-06-17 10:41:24
 
 [search]
-lastsearch = 2024-08-01 20:08:39
+lastsearch = 2024-08-01 21:32:41
 
 [www.diepxuan.com]
-match = -16.7%%
-title = Túi Singapore 150x190x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-singapore-150x190x09.html
+match = 5.3%%
+title = Túi nệm - Điệp Xuân
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.tui.co.uk]
 match = -10.5%%
