CI images update

--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-08-01 19:35:16
+lastsearch = 2024-08-01 21:35:08
 
 [shopee.vn]
 match = 7.4%%
@@ -52,9 +52,9 @@ title = Chăn Thái Lan Toto TT300
 url = https://phugiatrading.com/chan-thai-lan-toto-tt301/
 
 [www.youtube.com]
-match = -81.5%%
-title = Tin nóng 30/7: Ấn định thời gian, địa điểm trận đấu Việt Nam ...
-url = https://www.youtube.com/watch?v=ioQO2uG0FAs
+match = -55.6%%
+title = Cuộc đụng độ tuyệt hay giữa Thái Lan và Indonesia, Chatchu ...
+url = https://www.youtube.com/watch?v=YKd71tjVwJY
 
 [lasantevn.com]
 match = -11.1%%
@@ -159,7 +159,7 @@ url = https://www.sendo.vn/men-long-tuyet.htm
 [www.bebong.vn]
 match = 36.4%%
 title = Chăn lông tuyết cho bé
-url = https://www.bebong.vn/products/chan-long-tuyet-cho-be
+url = https://www.bebong.vn/products/chan-long-tuyet-cho-be?srsltid=AfmBOopuCHssWIVbrUw6aXZUZEOedIdIEpvVPNwVasG-Qu7JXkF_muS4
 
 [demxanh.com]
 match = -18.5%%
@@ -174,7 +174,7 @@ url = https://dogiasi.net/san-pham/chan-men-long-tuyet-trang-in-tho-gau-xuat-han
 [bebubam.vn]
 match = 43.5%%
 title = Chăn tuyết cho bé 2 lớp
-url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop
+url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop?srsltid=AfmBOorqTiYxWnvKqKAk38XyI_aYVpytHm0z9Lm18eZl0S38Y1PksxZA
 
 [tuoitre.vn]
 match = -59.3%%
