--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-01 17:22:28
+lastsearch = 2024-08-01 21:30:45
 
 [everonvn.com.vn]
 match = -133.3%%
 title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807?srsltid=AfmBOor_K-4MhmGTXO-wr-Bp1ie39mfDw42N4-QLa9kbHKtoDnv_lZJv
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
 match = -66.7%%
-title = Ga phủ EPC19056 160x200 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
+title = Ga phủ EPM19043 180x200 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/ga-phu-epm19043-180x200.html
 
 [www.diepxuan.com]
 match = 14.3%%
