--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-01 18:31:24
+lastsearch = 2024-08-01 21:28:19
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -540,4 +540,9 @@ url = https://www.transportation.gov/
 match = -123.5%%
 title = Illinois State Treasurer: Michael W. Frerichs
 url = https://www.illinoistreasurer.gov/
+
+[dre.colorado.gov]
+match = -170.6%%
+title = HOA Frequently Asked Questions | Division of Real Estate
+url = https://dre.colorado.gov/hoa-frequently-asked-questions
 
