--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-08-01 16:43:34
+lastsearch = 2024-08-01 21:22:29
 
 [www.instagram.com]
-match = -92.3%%
-title = Hoi Chan (@hoichandraws) - Instagram
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -176.9%%
+title = HArris CHan | My first dior saddle bagggg. 🎅🏽🧝🏻 ...
+url = https://www.instagram.com/_harris_chan_/p/Cz3dzHtyRjX/
 
 [hk.linkedin.com]
-match = -276.9%%
-title = Chow hoi ting Chow - Christian Dior高級時裝公司
-url = https://hk.linkedin.com/in/chow-hoi-ting-chow-a319a2243
+match = -100.0%%
+title = Hoi Yee Ng - Christian Dior Couture
+url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
 
 [wwd.com]
 match = -184.6%%
@@ -32,9 +32,9 @@ title = Sitemap
 url = https://www.linklaters.com/en-us/sitemap
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Catherine_Dior
+match = -11.1%%
+title = Fiona Sit
+url = https://en.wikipedia.org/wiki/Fiona_Sit
 
 [press.fourseasons.com]
 match = -269.2%%
@@ -302,8 +302,8 @@ title = Hoi Yi Chan's Reviews on Carousell Hong Kong
 url = https://www.carousell.sg/u/justforu.shop/reviews/
 
 [www.bbc.com]
-match = -261.5%%
-title = South Korea: First lady's Dior bag shakes country's ...
+match = -230.8%%
+title = South Korea: First lady's Dior bag shakes ... - BBC
 url = https://www.bbc.com/news/world-asia-68090638
 
 [www.straitstimes.com]
@@ -340,4 +340,9 @@ url = https://www.jobeasy.com/buyoyo/eng/SearchByArtist.do?arrfnbr=360230
 match = -138.5%%
 title = Gregor's Top 30 Actors from China/HK
 url = https://www.imdb.com/list/ls066069202/
+
+[www.tripadvisor.com]
+match = -230.8%%
+title = Christian Dior Omotesando - All You Need to Know ...
+url = https://www.tripadvisor.com/Attraction_Review-g1066456-d16707145-Reviews-Christian_Dior_Omotesando-Shibuya_Tokyo_Tokyo_Prefecture_Kanto.html
 
