--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-01 20:26:27
+lastsearch = 2024-08-01 21:21:47
 
 [chieutrucsaigon.com]
 match = 16.7%%
@@ -17,9 +17,9 @@ title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
 url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
 
 [chieutrelanlan.com]
-match = -20.8%%
-title = Chiếu trúc mắt nhỏ không viền màu trắng 140x190cm
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-140x190cm-15.html
+match = -70.8%%
+title = Giá chiếu trúc 8 tấc, 1m, 1m2, 1m6, 1m8 có trên thị trường
+url = https://chieutrelanlan.com/chieu-truc-voi-day-du-cac-size-cho-nguoi-doc-than-cho-ca-dai-gia-dinh-k16.html
 
 [trangvangvietnam.com]
 match = -37.5%%
@@ -32,9 +32,9 @@ title = CHIẾU TRE TRÚC HCM
 url = https://www.facebook.com/chieutructot/?locale=vi_VN
 
 [shopee.vn]
-match = -37.5%%
-title = (100%% ảnh thật) CHIẾU TRÚC HẠT NÂU, HẠT VÀNG ...
-url = https://shopee.vn/(100-ảnh-thật)-CHIẾU-TRÚC-HẠT-NÂU-HẠT-VÀNG-VIỆT-NAM-NGỌC-LÂM-LOẠI-CAO-CẤP-hàng-dày-mắt-đan-khít--i.11240484.4326979150
+match = 50.0%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [www.yellowpages.vn]
 match = -37.5%%
@@ -57,9 +57,9 @@ title = Chia sẻ kiến thức, kinh nghiệm sử dụng chiếu trúc (tre)
 url = https://chieutrucxinh.weebly.com/chia-se/previous/2
 
 [www.lazada.vn]
-match = -70.8%%
-title = Chiếu trúc/ chiếu tre 1m2*1m9 hàng Việt Nam cao cấp siêu ...
-url = https://www.lazada.vn/products/chieu-truc-chieu-tre-1m21m9-hang-viet-nam-cao-cap-sieu-re-chieu-khong-dung-vien-vai-ca-chieu-bang-hat-tre-i270848531.html?srsltid=AfmBOoqEemI7JEkFpbea2o9P78yCwi_yhYj4ib1HK8m6WNaJeuytyMuo
+match = 20.8%%
+title = [HCM]Chiếu trúc 0,8m x 19m đến 2m
+url = https://www.lazada.vn/products/hcmchieu-truc-08m-x-19m-den-2m-i405120490.html
 
 [thptthuthiem.hcm.edu.vn]
 match = -83.3%%
