--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-01 19:59:43
+lastsearch = 2024-08-01 21:24:15
 
 [www.diepxuan.com]
 match = 0.0%%
 title = Vỏ gối EP1812 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ep1812-45x65.html?srsltid=AfmBOopiNk9tDtYPqX0aT52KDqOKH_4xCrWpGg2V7s2DyDEq0w_vyHcn
+url = https://www.diepxuan.com/vo-goi-ep1812-45x65.html
 
 [www.qcyc.ca]
 match = -53.6%%
