--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-clfi/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-clfi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-clfi.html
 lastopen = 2024-06-06 17:09:48
 
 [search]
-lastsearch = 2024-08-01 20:25:25
+lastsearch = 2024-08-01 21:18:16
 
 [www.everonvn.vn]
 match = 29.6%%
@@ -14,7 +14,7 @@ url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 [everonvn.com.vn]
 match = 34.1%%
 title = Đệm Lò Xo Everon, King Koil 【 🥇Giảm 20%% 】HàngChính ...
-url = https://everonvn.com.vn/23/dem-lo-xo-everon
+url = https://everonvn.com.vn/23/dem-lo-xo-everon?srsltid=AfmBOoqrPe0QFv1bmcyMFCGxEoDrNU9jvc7z1NouqK46JUK4nAJqXnw_
 
 [everonkorea.com]
 match = 7.3%%
