--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-08-01 18:20:16
+lastsearch = 2024-08-01 21:27:38
 
 [noithathomy.com]
 match = -42.9%%
@@ -22,9 +22,9 @@ title = Thảm trải sàn phòng khách BALI sang trọng loại to KT 2m x ...
 url = https://www.lazada.vn/products/tham-trai-san-phong-khach-bali-sang-trong-loai-to-kt-2m-x-3m-nen-xanh-duong-hoa-van-mau-trang-in-3d-sac-net-i281430696.html
 
 [tiki.vn]
-match = -9.5%%
-title = Mua Thảm trải sàn Bali 2m*3m nhiều mẫu
-url = https://tiki.vn/thanh-ly-tham-trai-san-bali-2m-3m-gia-449k-nhieu-mau-p143200696.html
+match = -109.5%%
+title = Thảm trải sàn Sofa trang trí phòng khách Bali in 3D Nhung ...
+url = https://tiki.vn/tham-trai-san-sofa-trang-tri-phong-khach-bali-in-3d-nhung-ni-li-cao-cap-p104944051.html?spid=272166692
 
 [muachunghaiphong.com]
 match = 0.0%%
@@ -120,4 +120,9 @@ url = https://kakidecor.com/tham-trai-san-sofa-phong-khach-bali-nhung-ni/
 match = -104.8%%
 title = Thảm Trải Sàn Nỉ Lì Bali, Thảm Phòng Khách Size 1m6*2m3 ...
 url = https://sieuthinguyenkim.com/tham-trai-san-ni-li-bali-tham-nsh4732074271.html
+
+[hicophukien.com]
+match = -100.0%%
+title = Thảm sàn Bali in 3D Nhung nỉ 1.6x2m3 (về 3 màu Ghi, đỏ ...
+url = https://hicophukien.com/san-pham/tham-san-bali-in-3d-nhung-ni-16x2m3-ve-3-mau-ghi-do-xanh-den-cai-5647.html&p=4
 
