CI images update

--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-08-01 20:22:20
+lastsearch = 2024-08-01 21:45:29
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -47,9 +47,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [www.youtube.com]
-match = -16.7%%
-title = Top 3 Chiếu Trúc mùa hè hot nhất tại Đệm Xanh
-url = https://www.youtube.com/watch?v=HfaucbE1OKk
+match = -100.0%%
+title = Giá vàng hôm nay 16/12 | Vàng nữ trang 24K và 18K tăng ...
+url = https://www.youtube.com/watch?v=dn30Sg_9U3w
 
 [www.chotot.com]
 match = -54.2%%
@@ -72,9 +72,9 @@ title = IVECO DAILY PLUS – MẪU XE MINI BUS CAO CẤP 16
 url = https://thacoansuonghcm.com/iveco-daily-plus-mau-xe-mini-bus-cao-cap-16-19-cho-1438691.html
 
 [thuvienphapluat.vn]
-match = -50.0%%
-title = Thông tư 19/2016/TT-NHNN hoạt động thẻ ngân hàng
-url = https://thuvienphapluat.vn/van-ban/Tien-te-Ngan-hang/Thong-tu-19-2016-TT-NHNN-hoat-dong-the-ngan-hang-316056.aspx
+match = -58.3%%
+title = CÔNG TY CỔ PHẦN CƠ KHÍ 19-8 - Mã số thuế 2500161619
+url = https://thuvienphapluat.vn/ma-so-thue/cong-ty-co-phan-co-khi-198-mst-2500161619.html
 
 [baocaobang.vn]
 match = -95.8%%
