--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-01 17:47:04
+lastsearch = 2024-08-01 21:55:22
 
 [burningman.org]
 match = 0.0%%
@@ -27,8 +27,8 @@ title = Congressman Mark Desaulnier | Representing the 10th ...
 url = http://desaulnier.house.gov/
 
 [account.microsoft.com]
-match = -226.7%%
-title = Microsoft account | Sign In or Create Your Account Today ...
+match = -200.0%%
+title = Microsoft account | Sign In or Create Your Account Today
 url = https://account.microsoft.com/account
 
 [www.regmovies.com]
@@ -860,4 +860,9 @@ url = https://www.dallascowboys.com/
 match = -213.3%%
 title = Malnutrition: Symptoms, causes, diagnosis, and treatment
 url = https://www.medicalnewstoday.com/articles/179316
+
+[www.garmin.com]
+match = -33.3%%
+title = Garmin International | Home
+url = https://www.garmin.com/en-US/
 
