--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-01 17:46:09
+lastsearch = 2024-08-01 21:49:59
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -12,9 +12,9 @@ title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [songhongonline.vn]
-match = 4.3%%
-title = Bộ sản phẩm SH_BC23 080
-url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-87
+match = 0.0%%
+title = Bộ sản phẩm SH_BC22 066
+url = https://songhongonline.vn/products/bo-san-pham-song-hong-sh-bc22-1
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
-match = 23.5%%
-title = Bộ Chăn Ga Gối Tencel Hoàng Gia S21
-url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-s21
+match = 20.6%%
+title = Bộ Chăn Ga Gối Tencel Hoàng Gia H16
+url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-h16
 
 [shopee.vn]
 match = 50.0%%
@@ -54,7 +54,7 @@ url = https://happynest.vn/shop/EBGCTBM1820EST23035/bo-ga-chun-chan-bon-mua-sac-
 [everon.com.vn]
 match = 15.4%%
 title = Bộ Chăn Ga Everon ESM21013
-url = https://everon.com.vn/bo-chan-ga-everon-esm21013/?srsltid=AfmBOorsUJlm8Di1_xMM9Dyv3vi3OT7GMFhdCCUMFqlHXcvTIjjjqFEM
+url = https://everon.com.vn/bo-chan-ga-everon-esm21013/
 
 [chandrapsaigon.com]
 match = -11.8%%
