--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-08-01 20:04:16
+lastsearch = 2024-08-01 21:46:33
 
 [www.muji.com]
-match = 7.1%%
-title = chăn lông nhung xám mỏng
-url = https://www.muji.com/vn/vi/shop/000101/articles/recommend/1221
+match = -33.3%%
+title = RUỘT CHĂN
+url = https://www.muji.com/vn/products/section/E30001
 
 [thegioidemviet.vn]
 match = -192.9%%
@@ -37,9 +37,9 @@ title = Chăn lông tuyết muji mềm mại 2 lớp xuất nhật loại ...
 url = https://h5.lazada.vn/products/chan-long-tuyet-muji-mem-mai-2-lop-xuat-nhat-loai-long-mem-kich-thuoc-2mx2m3-nang-19kg-i1972993216.html
 
 [russo.vn]
-match = -107.1%%
-title = Chiếc chăn lông cừu muji chính hãng - Russo
-url = https://russo.vn/chiec-chan-long-cuu-muji/
+match = -207.1%%
+title = Những mẫu Chăn Muji thương hiệu hàng đầu của Nhật Bản
+url = https://russo.vn/nhung-mau-chan-muji-thuong-hieu-hang-dau-cua-nhat-ban/
 
 [coda.io]
 match = -164.3%%
