--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-08-01 21:26:36
+lastsearch = 2024-08-01 21:49:16
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -22,14 +22,14 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -46.7%%
-title = Đèn mắt ếch chiếu điểm HT 8094 10W
-url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8094-10w
+match = -40.0%%
+title = Đèn Trang Trí HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/hang/htlight/den-trang-tri
 
 [www.htlightlevel.vn]
-match = -233.3%%
-title = Đèn Pha LED 5054 - Công Ty Sản Xuất Đèn LED Chiếu Sáng ...
-url = https://www.htlightlevel.vn/den-pha-led-5054-10w/
+match = -146.7%%
+title = Đèn Rọi Ray 8019 10W Tay Trắng HT Light Level
+url = https://www.htlightlevel.vn/den-roi-ray-8019-10w-tay-trang/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
