--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-01 20:45:42
+lastsearch = 2024-08-01 21:55:44
 
 [hoa18.com]
 match = -84.2%%
@@ -67,8 +67,8 @@ title = Người thật lòng thương Ngộ Không #tayhai #trendingvideo ...
 url = https://www.tiktok.com/@kenhtayhai/video/7394314360526556423
 
 [xlinhho.hagiang.gov.vn]
-match = -110.5%%
-title = Những doanh nghiệp đưa cây chè Bắc Quang vượt qua ...
+match = -157.9%%
+title = Những doanh nghiệp đưa cây chè Bắc Quang vượt qua đại dịch ...
 url = https://xlinhho.hagiang.gov.vn/-/nhung-doanh-nghiep-dua-cay-che-bac-quang-vuot-qua-dai-dich-covid-19
 
 [metruyencv.com]
