--- a/images/nem-everon-200x200x9/config.ini
+++ b/images/nem-everon-200x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-200x200x9.html
 lastopen = 2024-06-06 17:10:44
 
 [search]
-lastsearch = 2024-08-01 18:57:58
+lastsearch = 2024-08-01 21:56:06
 
 [www.everonvn.vn]
 match = -120.0%%
@@ -19,7 +19,7 @@ url = http://nemxinh.net/thuong-hieu/everon
 [everonvn.com.vn]
 match = 20.0%%
 title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOooOG_MFiU1e6ICtRhUvImCrruKlQ_7kgqU5aRUApuj6rPjEj9es
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [everonchinhhang.vn]
 match = -50.0%%
@@ -44,7 +44,7 @@ url = https://demxanh.com/bang-gia-nem-foam-oyasumi.html
 [thegioidemonline.com]
 match = -30.0%%
 title = Bảng giá nệm Hanvico mới nhất 2022
-url = https://thegioidemonline.com/bang-gia-nem-hanvico-moi-nhat-2019.html?srsltid=AfmBOoqKkHGHJo9HrhMvg-V3z4us5uXyRmebh1cCbyGCfiO8HhQu78Bz
+url = https://thegioidemonline.com/bang-gia-nem-hanvico-moi-nhat-2019.html
 
 [thegioidemdep.com]
 match = -125.0%%
