CI images update

--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-08-01 20:21:37
+lastsearch = 2024-08-01 22:13:21
 
 [chieutruc.info]
 match = -60.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt 
 url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [demxanh.com]
-match = -24.0%%
-title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
-url = https://demxanh.com/bang-gia-chieu-truc-2018.html
+match = -28.0%%
+title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html?srsltid=AfmBOoq1J-kxyXPNG6bdaDieVmImKF9t2LKVYDbI0CmxPoFxFlezPkWs
 
 [shopee.vn]
 match = -64.0%%
@@ -69,7 +69,7 @@ url = https://antv.gov.vn/phap-luat-3/cong-an-cao-bang-bat-doi-tuong-lua-dao-hon
 [www.diepxuan.com]
 match = 32.0%%
 title = Chiếu cây Cao Bằng lụa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-180x200.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-180x200.html?srsltid=AfmBOooFYX02je5u2W-2bxY5hs1PZbFbRIZjMLIrL4lzaunXzpj932MX
 
 [olm.vn]
 match = -80.0%%
