--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-08-01 18:26:44
+lastsearch = 2024-08-01 22:21:36
 
 [shopee.vn]
 match = -37.5%%
@@ -23,7 +23,7 @@ url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
 
 [goni.vn]
 match = 4.2%%
-title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
+title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demluxury.com.vn]
@@ -67,9 +67,9 @@ title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
 url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 
 [foreverbedding.net]
-match = -20.8%%
-title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+match = 37.5%%
+title = Chiếu điều hòa - Forever Bedding
+url = https://foreverbedding.net/chieu-dieu-hoa
 
 [joliefam.vn]
 match = -37.5%%
@@ -185,4 +185,9 @@ url = https://khonemtonghop.com/chieu-dieu-hoa-la-gi/
 match = -20.8%%
 title = CHIẾU ĐIỀU HÒA CAO SU NON CAO CẤP TẶNG 2 VỎ GỐI ...
 url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-dieu-hoa-mu-non-cao-su-cao-cap-tang-2-vo-goi-2mx2m2-sp22560.html
+
+[nclvn.com]
+match = -66.7%%
+title = Review Top 5 chiếu mây điều hòa đáng mua nhất mùa hè 2024
+url = https://nclvn.com/review/chieu-may-dieu-hoa-dang-mua-p3432.html
 
