--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-08-01 20:31:56
+lastsearch = 2024-08-01 22:25:43
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -17,9 +17,9 @@ title = Davina Xanh (4/4/2024) - Athlete Awards
 url = https://bigwest.org/awards.aspx?aow=1106
 
 [www.imdb.com]
-match = -14.3%%
-title = The Jungle Book (2016)
-url = https://www.imdb.com/title/tt3040964/
+match = -7.1%%
+title = The Guardian (2006)
+url = https://www.imdb.com/title/tt0406816/
 
 [www.etsy.com]
 match = 35.7%%
@@ -132,9 +132,9 @@ title = Buy Blue Man Group Las Vegas Tickets
 url = https://www.blueman.com/las-vegas/buy-tickets
 
 [www.facebook.com]
-match = 14.3%%
-title = Rau Xanh Houston
-url = https://www.facebook.com/groups/931300110674323/
+match = -242.9%%
+title = Love and Deepspace Global Official Group | Hey, can u ...
+url = https://www.facebook.com/groups/loveanddeepspaceofficial/posts/hey-can-u-guys-help-me-choose-1-of-the-2-i-want-a-little-twinsister-that-looks-a/937597518087418/
 
 [mail.google.com]
 match = -14.3%%
@@ -360,4 +360,9 @@ url = https://japanesecoffeeco.com/blogs/japanese-coffee-blog/how-blue-bottle-wa
 match = 0.0%%
 title = 
 url = https://antoursvietnam.com/xanh-sm-taxi-app-vietnam-guide/
+
+[www.fragrantica.com]
+match = -50.0%%
+title = Amouage Perfumes And Colognes
+url = https://www.fragrantica.com/designers/Amouage.html
 
