--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-08-01 20:47:45
+lastsearch = 2024-08-01 22:30:09
 
 [vnexpress.net]
 match = -128.6%%
@@ -17,9 +17,9 @@ title = Review Khu Du Lịch Hồ Mây Park Vũng Tàu
 url = https://vielimousine.com/tin-tuc/ho-may-park-vung-tau.html
 
 [www.youtube.com]
-match = -114.3%%
-title = Du Lịch Vũng Tàu 2023: Cập nhật giá vé tham quan mới nhất
-url = https://www.youtube.com/watch?v=St3S4ilkoIY
+match = -61.9%%
+title = Daily Vlog: 12 tiếng du lịch bụi ở Vũng Tàu…
+url = https://www.youtube.com/watch?v=d8mZRVKGnIo
 
 [liontrip.vn]
 match = -81.0%%
