--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-08-01 11:19:12
+lastsearch = 2024-08-01 22:27:29
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -460,4 +460,9 @@ url = https://vnpay.vn/tre-em-may-tuoi-duoc-vao-rap-chieu-phim-011x01ls5hsns
 match = -162.5%%
 title = Thiết lập và ghép đôi Apple Watch của bạn với iPhone
 url = https://support.apple.com/vi-vn/guide/watch/apdde4d6f98e/watchos
+
+[mobilecity.vn]
+match = -212.5%%
+title = Top 9 phim chiếu rạp tháng 6/2024 gây sốt với đa dạng thể ...
+url = https://mobilecity.vn/tin-tuc/top-phim-chieu-rap-thang-6-2024-gay-sot.html
 
