--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-08-01 21:31:26
+lastsearch = 2024-08-01 22:23:18
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -12,9 +12,9 @@ title = Thắng Lợi
 url = https://maythangloi.com.vn/
 
 [nemxinh.net]
-match = -77.8%%
-title = Thắng Lợi
-url = http://nemxinh.net/thuong-hieu/thang-loi
+match = -110.0%%
+title = Bộ ga chun
+url = http://nemxinh.net/bo-ga-chun-cp208.html
 
 [shopee.vn]
 match = 8.0%%
@@ -62,9 +62,9 @@ title = Bộ ga chun Thắng Lợi 180x200
 url = https://www.diepxuan.com/bo-ga-chun-thang-loi-180x200.html
 
 [everonvn.com.vn]
-match = 12.0%%
-title = Bộ Ga Chun At-04 Giảm Giá - Everon
-url = https://everonvn.com.vn/everon/136/bo-he-everon
+match = -36.0%%
+title = Bảng giá bán lẻ Ga chun Everon Ep1834 - Rose
+url = https://everonvn.com.vn/everon/704/ga-chun-everon-ep1834-rose
 
 [songhongonline.vn]
 match = 17.4%%
