--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-08-01 19:38:24
+lastsearch = 2024-08-01 22:29:29
 
 [burningman.org]
 match = 0.0%%
@@ -632,9 +632,9 @@ title = ADA.gov: The Americans with Disabilities Act
 url = https://www.ada.gov/
 
 [books.google.com]
-match = -33.3%%
-title = Men's wear. [semi-monthly]
-url = https://books.google.com/books?id=so96eNfLPE4C&pg=RA1-PA99&lpg=RA1-PA99&dq=man+re+trang+12&source=bl&ots=IGQqnc_aEL&sig=ACfU3U0MbLMmZ1NfGrwU8Vr5Di3ZpVDdfw&hl=en&sa=X&ved=2ahUKEwjii4mXxMuHAxWKHUQIHTwdFaMQ6AF6BAgyEAM
+match = -266.7%%
+title = The Holy Bible, Containing the Old and New Testaments: Newly ...
+url = https://books.google.com/books?id=YUFbAAAAQAAJ&pg=RA3-PA6&lpg=RA3-PA6&dq=man+re+trang+12&source=bl&ots=skN6trwWP4&sig=ACfU3U05QVV8ikoeqRiw6WYSzJyUfXtpCg&hl=en&sa=X&ved=2ahUKEwiV-N6DjtSHAxVXCTQIHaDFAakQ6AF6BAgjEAM
 
 [satsuite.collegeboard.org]
 match = -93.3%%
