--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-01 20:33:21
+lastsearch = 2024-08-01 22:21:13
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgnIMni6&sig=ACfU3U1K6LD9aWm1-6kYHGQpPw8-ehhJkw&hl=en&sa=X&ved=2ahUKEwigy4CJ9NOHAxVbEFkFHbqwC_4Q6AF6BAgjEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgnJIrp8&sig=ACfU3U1BSZtQXu0CbLnfSGYmvkRyLFxxQQ&hl=en&sa=X&ved=2ahUKEwinoIGXjNSHAxULGTQIHSTYBgQQ6AF6BAglEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -94,7 +94,7 @@ url = https://renaissancefest.com/
 [us.mbt.com]
 match = -220.0%%
 title = Men's Ren in White 702758-16L - MBT Shoes
-url = https://us.mbt.com/men-s-ren-white-702758-16l.html?srsltid=AfmBOoo_OvyLOk5LkVgHwRTKvl902naYYxBW_DM1v-kmzsJT_icm1Ilu
+url = https://us.mbt.com/men-s-ren-white-702758-16l.html
 
 [hopkinssports.com]
 match = -100.0%%
