--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-08-01 19:37:23
+lastsearch = 2024-08-01 22:23:59
 
 [xoptraisan.info]
-match = 17.6%%
-title = Thảm nỉ ghép Tường Lâm 60×60
-url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
+match = -64.7%%
+title = Thảm nỉ đế cao su không răng Âu Lạc 50×50
+url = https://xoptraisan.info/tham-ni-50x50-au-lac-de-cao-su
 
 [www.diepxuan.com]
 match = 100.0%%
