CI images update

--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-01 17:23:10
+lastsearch = 2024-08-01 22:36:47
 
 [everon.online]
 match = 19.2%%
@@ -72,9 +72,9 @@ title = Fuji Master
 url = https://fujimaster.com.vn/
 
 [store.steampowered.com]
-match = 7.7%%
-title = Anno 1800 - Steampunk Pack
-url = https://store.steampowered.com/app/2830580/Anno_1800__Steampunk_Pack/?l=vietnamese&snr=1_wishlist_4__wishlist-capsule
+match = 3.8%%
+title = Anno 1800 - Cosmetic Bundle #2
+url = https://store.steampowered.com/app/2622020/?l=vietnamese&utm_source=indienova&curator_clanid=9170052
 
 [vi.wikipedia.org]
 match = 3.8%%
@@ -390,4 +390,9 @@ url = https://changagoidemsonghong.online/voi-2-trieu-dong-toi-co-nen-mua-dem-so
 match = -76.9%%
 title = 7. Phân tích chi phí và lợi nhuận đối với A/R CDM và REDD+
 url = https://openjicareport.jica.go.jp/pdf/12067989_02.pdf
+
+[eurosun.com.vn]
+match = 9.1%%
+title = NỒI LUỘC GÀ 1602-KINGS
+url = https://eurosun.com.vn/noi-luoc-ga-1602-kings/
 
