--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-08-01 20:35:06
+lastsearch = 2024-08-01 22:35:01
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -430,4 +430,9 @@ url = https://sadico.com.vn/wp-content/uploads/2024/07/THONG-BAO-THAY-DOI-NHAN-S
 match = -193.3%%
 title = Tty do - Hanh ph& S6:3-7-1 /QD-UBND Diik Lak, ngi
 url = https://cumgar.daklak.gov.vn/documents/673929/759524/Quyết định phê duyệt điều chỉnh quy hoạch chung xây dựng thị trấn Quảng Phú đến năm 2025 tầm nhìn đến năm 2035.pdf
+
+[www.kkday.com]
+match = -253.3%%
+title = [Nơi tuyệt vời dành cho cha mẹ và con cái] Nhà hàng siêu ...
+url = https://www.kkday.com/vi/product/166893
 
