--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-09 23:35:14
 lastsearch = 2024-08-01 22:18:00
 
 [www.youtube.com]
-match = -147.4%%
-title = Kỹ thuật trồng mộc hương - loài cây siêu "đắt đỏ " | VTC16
-url = https://www.youtube.com/watch?v=q48GH4XH8uY
+match = -26.3%%
+title = cách trồng và chăm sóc cây mộc hương
+url = https://www.youtube.com/playlist?list=PLOR0hkahAaw2OD6ixcgagDZcwB5Jx3-Nd
 
 [trangtrisanvuon.vn]
 match = -147.4%%
