--- a/images/ruot-goi-ke-everhome-mong/config.ini
+++ b/images/ruot-goi-ke-everhome-mong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everhome-mong.html
 lastopen = 2024-06-10 00:15:54
 
 [search]
-lastsearch = 2024-08-01 20:51:32
+lastsearch = 2024-08-01 22:30:20
 
 [everhomevietnam.com]
 match = 12.0%%
@@ -112,9 +112,9 @@ title = Ruột gối - Everhome
 url = https://demeverhome.com/san-pham/ruot-goi/
 
 [thegioidemonline.com]
-match = -56.0%%
-title = Cách giặt chăn ga gối Dreamland đơn giản hiệu quả
-url = https://thegioidemonline.com/cach-giat-chan-ga-goi-dreamland-don-gian-hieu-qua.html
+match = -36.0%%
+title = Cách giặt chăn ga gối Hanvico bằng máy giặt
+url = https://thegioidemonline.com/cach-giat-chan-ga-goi-hanvico-bang-may-giat.html
 
 [thegioidemdep.com]
 match = -24.0%%
