--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-08-01 21:25:56
+lastsearch = 2024-08-01 22:28:58
 
 [www.cms.gov]
 match = 4.5%%
@@ -127,9 +127,9 @@ title = MEET ALISON MASS
 url = https://www.stern.nyu.edu/sites/default/files/assets/documents/STERNbusiness-Sp16-Meet-Alison-Mass.pdf
 
 [www.ncbi.nlm.nih.gov]
-match = -118.2%%
-title = Protein acylation: mechanisms, biological functions and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9797573/
+match = 9.1%%
+title = Bacterial Terpenome - PMC
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8107197/
 
 [westsideobserver.com]
 match = -58.3%%
@@ -617,8 +617,8 @@ title =
 url = https://en.wikipedia.org/wiki/3rd_Battalion,_3rd_Marines
 
 [appropriations.house.gov]
-match = -109.1%%
-title = asRequestedCPFs_FY25_6.20.24 - House Appropriations
+match = -13.6%%
+title = asRequestedCPFs_FY25_6.20.24
 url = https://appropriations.house.gov/sites/evo-subsites/republicans-appropriations.house.gov/files/evo-media-document/fy25-house-cpfs-as-requested-06.28.2024.xlsx
 
 [www.bpelsg.ca.gov]
