--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-08-01 18:58:19
+lastsearch = 2024-08-01 22:33:58
 
 [gobearcats.com]
 match = -142.1%%
@@ -59,7 +59,7 @@ url = https://download.asic.gov.au/media/1314541/ASIC40A_08.pdf
 [www2.ed.gov]
 match = -126.3%%
 title = Candidates for the US Presidential Scholars Program
-url = https://www2.ed.gov/programs/psp/2024/candidates.pdf
+url = https://www2.ed.gov/programs/psp/2023/candidates.pdf
 
 [www.lumiere-education.com]
 match = 0.0%%
@@ -137,9 +137,9 @@ title = Gary Vilke - UCSD Profiles
 url = https://profiles.ucsd.edu/gary.vilke
 
 [som.cuanschutz.edu]
-match = -110.5%%
-title = Larry Allen, MD Professor, Medicine-Cardiology
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/13824
+match = -121.1%%
+title = Rubin Tuder, MD - School of Medicine - CU Anschutz
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/17863
 
 [saveseattleschools.blogspot.com]
 match = -131.6%%
@@ -312,9 +312,9 @@ title = GW170104: Observation of a 50-solar-mass binary black ...
 url = https://www.ligo.org/detections/GW170104/paper/GW170104-Supplement.pdf
 
 [www.ncbi.nlm.nih.gov]
-match = -173.7%%
-title = Evaluation of the Extent of Variant Histology in Urothelial ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8988952/
+match = -84.2%%
+title = Vancomycin Resistance in Enterococcus and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9866002/
 
 [www.ucdavis.edu]
 match = -52.6%%
