--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-08-01 21:48:34
+lastsearch = 2024-08-01 23:01:16
 
 [shopee.vn]
 match = 18.5%%
@@ -14,7 +14,7 @@ url = https://shopee.vn/list/chiếu điều hòa
 [demxanh.com]
 match = 14.8%%
 title = Sử dụng chiếu điều hòa có tốt hay không?
-url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html?srsltid=AfmBOooUzZBbUvcTe8hMwK1usk1I1ubhAhsZrZq-1b91OBmAOlUJMaPI
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
 
 [tiki.vn]
 match = 33.3%%
@@ -24,7 +24,7 @@ url = https://tiki.vn/blog/chieu-dieu-hoa/
 [foreverbedding.net]
 match = 0.0%%
 title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong?srsltid=AfmBOor9kAds-BpOeiQRIGNkudpxAB6A-QvQFRSsuAQOS27dFqKR9Eml
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
 
 [kyoryo.vn]
 match = -40.7%%
@@ -84,7 +84,7 @@ url = https://lybalansieucute.com/chieu-dieu-hoa-noi-dia-nanjiren-11-18
 [spacet.vn]
 match = -40.7%%
 title = Hướng dẫn giặt chiếu điều hòa đúng cách, đơn giản, hiệu ...
-url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua?srsltid=AfmBOopTOMUEqXFrCu5ZQgVKz9yGhlfUvS11ddPFJBSCnq7qZNrsAArh
+url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua
 
 [happynest.vn]
 match = -3.7%%
@@ -109,7 +109,7 @@ url = https://voicon.net/bo-chieu-goi-dieu-hoa-cao-cap/
 [vtvhyundai.vn]
 match = -22.2%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOoopsUa90PDC6VGNd5VjUQMYQfPAXA7hScvXywC1ZhJS-m7YZ6e2
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
 
 [noithattana.vn]
 match = 29.6%%
