--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-01 22:27:08
+lastsearch = 2024-08-01 23:01:35
 
 [www.diepxuan.com]
 match = 0.0%%
-title = Chiếu nhựa Hà Nội 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-180x200.html
+title = Vỏ gối EP1812 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-ep1812-45x65.html
 
 [www.qcyc.ca]
 match = -53.6%%
