--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-08-01 22:29:29
+lastsearch = 2024-08-01 22:50:19
 
 [burningman.org]
 match = 0.0%%
@@ -604,7 +604,7 @@ url = https://www.nasa.gov/nasatv/
 [www.ray-ban.com]
 match = -180.0%%
 title = Ray-Ban® Official Sunglasses Store | Ray-Ban® US
-url = https://www.ray-ban.com/
+url = https://www.ray-ban.com/usa
 
 [www.8newsnow.com]
 match = -220.0%%
