--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-08-01 20:32:16
+lastsearch = 2024-08-01 22:51:39
 
 [www.tui.co.uk]
-match = -233.3%%
-title = Holiday Destinations & Inspiration 2024 / 2025
-url = https://www.tui.co.uk/destinations/holiday-destinations
+match = -66.7%%
+title = Flight and Travel Options
+url = https://www.tui.co.uk/destinations/info/travel-options
 
 [uk.trip.com]
-match = 0.0%%
-title = 
+match = -233.3%%
+title = Book Cheap TUI Airways Limited Flights to Seoul
 url = https://uk.trip.com/flights/airline-by/thomson-airways-limited-flight-to-sel/
 
 [www.diepxuan.com]
