CI images update

--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-08-01 21:29:44
+lastsearch = 2024-08-01 23:41:36
 
 [shopee.vn]
 match = 25.0%%
@@ -52,9 +52,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [m.facebook.com]
-match = -175.0%%
-title = Sơ lược về làng nghề dệt chiếu tại Long Định - Cần Đước
-url = https://m.facebook.com/notes/cộng-đồng-long-an/sơ-lược-về-làng-nghề-dệt-chiếu-tại-long-định-cần-đước/402374479949088/
+match = 22.2%%
+title = Chieu Lac
+url = https://m.facebook.com/chieu.lac.73/
 
 [baolongan.vn]
 match = -125.0%%
@@ -97,9 +97,9 @@ title = Chiều dài xương mũi thai nhi 12 tuần bình thường là bao ...
 url = https://www.vinmec.com/vie/bai-viet/chieu-dai-xuong-mui-thai-nhi-12-tuan-binh-thuong-la-bao-nhieu-vi/
 
 [books.google.com]
-match = -150.0%%
-title = Ph_c Truy_n Lu_t L_ Ký (T_p 2: Ph_c Truy_n 12-26)
-url = https://books.google.com/books?id=qpuaDwAAQBAJ&pg=PA338&lpg=PA338&dq=chieu+lac+soc+12&source=bl&ots=oA-u6UW3Rl&sig=ACfU3U2ohZZQCblBxMbIxxprobX9mjjtDA&hl=en&sa=X&ved=2ahUKEwiLnu7VttKHAxUBCjQIHYu5J40Q6AF6BAgnEAM
+match = -231.2%%
+title = Tam tu kinh: ou, Le livre des phrases de trois caractères, ...
+url = https://books.google.com/books?id=So8wAAAAYAAJ&pg=RA3-PA14&lpg=RA3-PA14&dq=chieu+lac+soc+12&source=bl&ots=ihPRbV6bb-&sig=ACfU3U0NPejSpFdCYjfeHP0zwlpDa_1g3Q&hl=en&sa=X&ved=2ahUKEwjIpe6SntSHAxXQC3kGHVvMANMQ6AF6BAgoEAM
 
 [baovinhlong.vn]
 match = -137.5%%
