--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-08-01 22:50:19
+lastsearch = 2024-08-01 23:44:19
 
 [burningman.org]
 match = 0.0%%
@@ -1135,4 +1135,9 @@ url = https://max.adobe.com/
 match = -33.3%%
 title = Garmin International | Home
 url = https://www.garmin.com/en-US/
+
+[www.hbo.com]
+match = -240.0%%
+title = Curb Your Enthusiasm | Official Website for the HBO Series
+url = https://www.hbo.com/curb-your-enthusiasm
 
