--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-08-01 12:58:46
+lastsearch = 2024-08-01 23:47:01
 
 [hanvico.com.vn]
 match = 28.6%%
-title = Bộ ga chun LIVING - LV52
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv52/
+title = Bộ ga chun LIVING - LV55
+url = https://hanvico.com.vn/san-pham/lv55/
 
 [www.diepxuan.com]
 match = -4.8%%
