--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-01 18:47:41
+lastsearch = 2024-08-01 23:40:14
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -175.0%%
-title = Nước lũ dâng cao, nhiều nơi chìm trong biển nước | VTC16
-url = https://www.youtube.com/watch?v=d0pMIC4bxBQ
+match = -218.8%%
+title = tuyệt chiêu nối ống nước hai đầu cố định cực hay, cách sửa ...
+url = https://www.youtube.com/watch?v=DhNa7JeUr54
 
 [hawater.com.vn]
 match = -75.0%%
