--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-08-01 22:55:49
+lastsearch = 2024-08-01 23:48:44
 
 [bedding.vn]
 match = -123.1%%
@@ -57,9 +57,9 @@ title = Bộ ga chun Elegant H156 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-elegant-h156
 
 [www.instagram.com]
-match = -100.0%%
-title = 𝐆𝐚 𝐂𝐡𝐮𝐧 𝐘𝐚𝐮 𝐏𝐡𝐨𝐭𝐨𝐠𝐫𝐚𝐩𝐡𝐲 (@gachunyau)
-url = https://www.instagram.com/gachunyau/?hl=en
+match = -284.6%%
+title = UGA College of Public Health | For doctoral student Tzu ...
+url = https://www.instagram.com/p/C3au3yItjnC/?img_index=publichealthuga
 
 [pubmed.ncbi.nlm.nih.gov]
 match = -276.9%%
@@ -117,9 +117,9 @@ title = jack l. skinner, ph.d., pe
 url = https://www.mtech.edu/mechanical-engineering/faculty/jack-skinner/docs/cv-jack-skinner.pdf
 
 [researchdirectory.uc.edu]
-match = -246.2%%
-title = Expert Profile: James Herman - UC Research Directory
-url = https://researchdirectory.uc.edu/p/hermanjs
+match = -261.5%%
+title = Expert Profile: Je Hyeong Bahk - UC Research Directory
+url = https://researchdirectory.uc.edu/p/bahkjg
 
 [thegioinem.com]
 match = -230.8%%
@@ -172,8 +172,8 @@ title = 16th Annual Behavioral Operations Conference, 2023
 url = https://jindal.utdallas.edu/events/behavioral-operations-conference__trashed/2023-06/
 
 [clic.ss.ucla.edu]
-match = -307.7%%
-title = Events | Center for Language, Interaction, and Culture - UCLA
+match = -261.5%%
+title = Events | Center for Language, Interaction, and Culture
 url = https://clic.ss.ucla.edu/speakers/
 
 [med.uc.edu]
