CI images update

--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-08-01 17:54:27
+lastsearch = 2024-08-02 00:13:53
 
 [www.gov.uk]
 match = -200.0%%
@@ -47,9 +47,9 @@ title = Khoe công trình e đang thi công (cập nhật trang 16
 url = https://www.otosaigon.com/threads/khoe-cong-trinh-e-dang-thi-cong-cap-nhat-trang-16-nha-cho-thue-ly-phuc-man-q-7.5405802/
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/FIFA_Men's_World_Ranking
+match = 10.0%%
+title = Thuy Trang
+url = https://en.wikipedia.org/wiki/Thuy_Trang
 
 [www.regmovies.com]
 match = -113.3%%
@@ -1130,4 +1130,9 @@ url = https://www.garmin.com/en-US/
 match = -200.0%%
 title = Home - Office of the Alameda County District Attorney
 url = https://www.alcoda.org/
+
+[www.betterhealth.vic.gov.au]
+match = -140.0%%
+title = Warts
+url = https://www.betterhealth.vic.gov.au/health/conditionsandtreatments/warts
 
