--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-08-01 20:34:45
+lastsearch = 2024-08-02 00:20:04
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -18,8 +18,8 @@ url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 
 [demxanh.com]
 match = -22.6%%
-title = Ga chống thấm Hilton Cotton cao cấp CTHT01 | Khuyến mãi
-url = https://demxanh.com/ga-chong-tham-hilton-cotton-cao-cap-ctht01.html
+title = Ga chống thấm Hilton Cotton cao cấp CTHT04 | Khuyến mãi
+url = https://demxanh.com/ga-chong-tham-hilton-cotton-cao-cap-ctht04.html
 
 [dreamland.vn]
 match = -21.1%%
@@ -27,9 +27,9 @@ title = Chăn Tuyết Điều Hòa
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
-match = 9.7%%
-title = Chăn Ga Gối Dreamland Chính Hãng Giá Tốt
-url = https://demxinh.vn/chan-ga-goi-dreamland/
+match = -9.7%%
+title = [HỎI-ĐÁP] Ga chống thấm loại nào tốt nhất hiện nay?
+url = https://demxinh.vn/tin-tuc/hoi-dap-ga-chong-tham-loai-nao-tot-nhat-hien-nay.html
 
 [dongahome.vn]
 match = 3.2%%
