--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-01 19:38:03
+lastsearch = 2024-08-02 00:19:22
 
 [dongagroup.vn]
 match = -272.7%%
 title = Hơn 26 mẫu giường ngủ 2m giá rẻ | giao hàng tận nhà
-url = https://dongagroup.vn/noi-that-phong-ngu/giuong-ngu/2m-162.html
+url = https://dongagroup.vn/noi-that-phong-ngu/giuong-ngu/2m-162.html?srsltid=AfmBOopEiSVuVDul97Sil1taaN7E8iQsjnAg5_sYrcETCQt1b5kl4Lef
 
 [phana.com.vn]
 match = -63.6%%
@@ -57,9 +57,9 @@ title = Combo giường tủ 2m
 url = https://shopdogothachthat.com/m/64/174/Combo-giuong-tu-2m
 
 [ifurni.vn]
-match = -18.2%%
-title = Giường bọc nệm JULIANA 2
-url = https://ifurni.vn/san-pham/giuong-boc-nem-juliana-2-2433.html
+match = 0.0%%
+title = Giường bọc nệm HELEN 2
+url = https://ifurni.vn/san-pham/giuong-eda-1564.html
 
 [shopee.vn]
 match = -263.6%%
