CI images update

--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-08-01 17:43:59
+lastsearch = 2024-08-02 00:39:02
 
 [tiki.vn]
 match = -47.6%%
@@ -12,9 +12,9 @@ title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu trúc đài loan
 
 [www.facebook.com]
-match = -85.7%%
-title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
-url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
+match = -9.5%%
+title = Xin chào, tôi ở Đài Loan | Kaohsiung
+url = https://www.facebook.com/toiodailoan/?locale=vi_VN
 
 [www.roc-taiwan.org]
 match = -19.0%%
@@ -42,9 +42,9 @@ title = Đài Loan – Wikipedia tiếng Việt
 url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [m.facebook.com]
-match = -90.5%%
-title = Lotte Cinema - THANH XUÂN 18x2: LỮ TRÌNH HƯỚNG ...
-url = https://m.facebook.com/story.php/?story_fbid=807781184716598&id=100064541715866
+match = -104.8%%
+title = CGV Cinemas Vietnam - Sau 4 ngày công chiếu tại Đài ...
+url = https://m.facebook.com/cgvcinemavietnam/photos/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844924327674339/
 
 [phimmoichillt.net]
 match = -123.8%%
@@ -67,9 +67,9 @@ title = Hứa Quang Hán 'ghi điểm' trong phim Đài Loan có doanh ...
 url = https://thanhnien.vn/hua-quang-han-ghi-diem-trong-phim-dai-loan-co-doanh-thu-chieu-som-cao-nhat-1852404081738149.htm
 
 [www.youtube.com]
-match = -128.6%%
-title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 18 | Trọn Bộ Phim ...
-url = https://www.youtube.com/watch?v=-5kfc6oUOmU
+match = -152.4%%
+title = Dự báo thời tiết 18h - 01/08/2024 | Miền Bắc mưa lớn đến bao ...
+url = https://www.youtube.com/watch?v=EXiNjpyqwJY
 
 [zh.wikipedia.org]
 match = -9.5%%
@@ -77,9 +77,9 @@ title = Đài Bắc – Wikipedia tiếng Việt
 url = https://zh.wikipedia.org/zh-cn/vi:Đài_Bắc
 
 [vn.taiwantoday.tw]
-match = -41.7%%
-title = Taiwan Today
-url = https://vn.taiwantoday.tw/
+match = -533.3%%
+title = Ảnh
+url = https://vn.taiwantoday.tw/list_photo.php?&iden=44211
 
 [nhandan.vn]
 match = -142.9%%
@@ -182,9 +182,9 @@ title = Lịch chiếu
 url = https://chieuphimquocgia.com.vn/movies
 
 [www.skyscanner.com.vn]
-match = -81.0%%
-title = Vé máy bay giá rẻ từ Đài Loan đến Pháp - Skyscanner
-url = https://www.skyscanner.com.vn/routes/tw/fr/đai-loan-to-phap.html
+match = -95.2%%
+title = Vé máy bay giá rẻ từ Đài Bắc đến Hoa Kỳ - Skyscanner
+url = https://www.skyscanner.com.vn/routes/tpet/us/đai-bac-to-hoa-ky.html
 
 [113.165.166.110:81]
 match = -81.0%%
@@ -212,9 +212,9 @@ title = Phim Đài Loan
 url = https://motchilltv.to/quoc-gia/dai-loan
 
 [www.bbc.com]
-match = -119.0%%
-title = Nguyễn Phú Trọng, hình ảnh bi tráng của 'người cộng sản ...
-url = https://www.bbc.com/vietnamese/articles/c16j4z56zdpo
+match = -123.8%%
+title = Chú rể 40 tuổi đẹp trai chi 700.000 tệ cưới cô dâu Việt 18 ...
+url = https://www.bbc.com/vietnamese/articles/cyx0jw1ypq9o
 
 [cau-ca.com]
 match = -42.9%%
@@ -285,4 +285,9 @@ url = https://www.cuatudongthuanphat.com/san-pham/cua-truot-tu-dong-dai-loan-kth
 match = -47.6%%
 title = Thang Nhôm Gấp Đài Loan Pal B6-205 Giá Rẻ #1 HN
 url = https://thangnhomnhapkhau.com/thang-nhom-gap-dai-loan-pal-b6-205
+
+[www.ustraveldocs.com]
+match = -109.5%%
+title = Nộp đơn xin Visa Hoa Kỳ | Các Câu hỏi Thường gặp (FAQ)
+url = https://www.ustraveldocs.com/vn_vn/vn-gen-faq.asp
 
