--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-01 22:36:47
+lastsearch = 2024-08-02 00:33:43
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/mela-toning-cream-ใช้ยังไง
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVUNtG_A&sig=ACfU3U1RlSS9ejS7-ZqOXWz8vMSRD98Kow&hl=en&sa=X&ved=2ahUKEwiSkfi4gdOHAxWKD0QIHQ25C6gQ6AF6BAgYEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVVIoIZB&sig=ACfU3U1Vo1R-oOXIUGHXq24kJwmPFqP-1g&hl=en&sa=X&ved=2ahUKEwiIxuvlqdSHAxVaLTQIHVxfLuAQ6AF6BAgdEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
