--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-08-01 22:30:31
+lastsearch = 2024-08-02 00:35:50
 
 [demxanh.com]
 match = 34.5%%
 title = Chiếu điều hòa cao su non đa sắc tím than
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html?srsltid=AfmBOookbCUwhotbt9U6IN4msGtbTvo20RyvJ2siCRGt55xipvg8ndrU
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html
 
 [leflair.com]
 match = 6.9%%
@@ -17,9 +17,9 @@ title = Bộ Chiếu Cao Su Điều Hòa Mix 180x200 (3 Món)...
 url = https://leflair.com/shop/delete-bo-chieu-cao-su-ieu-hoa-mix-180x200-3-mon-16379
 
 [www.lazada.vn]
-match = -17.2%%
-title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html?srsltid=AfmBOooA12_r8bdI9Trbsw6WdXOD8Rh06sCINYMG-UViumblkzA9x_q7
+match = -31.0%%
+title = chiếu điều hòa mát lạnh chiếu cao su non 5D Chich Studio ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-chieu-cao-su-non-chich-studio-mem-mai-thoang-matsize-160x200-180x200-220x200-i1975349002.html
 
 [tiki.vn]
 match = 20.7%%
@@ -59,7 +59,7 @@ url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 [www.diepxuan.com]
 match = 31.0%%
 title = Chiếu điều hòa caosu non 2D 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-caosu-non-2d-180x200.html?srsltid=AfmBOoq4hKPuwtH9IZ2dR5MxBsQWGU5gVRrXP-nTKvOqL22Tm8U_hQb2
+url = https://www.diepxuan.com/chieu-dieu-hoa-caosu-non-2d-180x200.html
 
 [chiaki.vn]
 match = 10.3%%
