--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-08-01 23:51:06
+lastsearch = 2024-08-02 00:33:00
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -47,9 +47,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [www.youtube.com]
-match = -16.7%%
-title = Top 3 Chiếu Trúc mùa hè hot nhất tại Đệm Xanh
-url = https://www.youtube.com/watch?v=HfaucbE1OKk
+match = -33.3%%
+title = Cách làm HỘ CHIẾU online cho TRẺ EM mới nhất
+url = https://www.youtube.com/watch?v=78hOmwacySo
 
 [www.chotot.com]
 match = -54.2%%
