CI images update

--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-08-02 00:58:42
+lastsearch = 2024-08-02 01:25:27
 
 [agasound.vn]
 match = 6.7%%
@@ -83,8 +83,8 @@ url = https://dochoimamnon123.com/d2-cot-bong-ro-ham-chui-van-dong-the-chat
 
 [m.facebook.com]
 match = -140.0%%
-title = Học sinh Hà Nội | tìm ae xã đoàn D2 ntrai-ttin
-url = https://m.facebook.com/groups/HocSinhHN/posts/1614103965902125/
+title = Ways Station Gaming - "T hết tiền rồi ...
+url = https://m.facebook.com/waysstation/photos/t-hết-tiền-rồi-tối-nay-đừng-đi-bar-ra-net-nhé-cho-rẻ-t-chơi-pubg-còn-m-chơi-liên/1163379434092678/
 
 [vietnamairport.vn]
 match = -93.3%%
@@ -305,4 +305,14 @@ url = https://thepxuanlien.com/san-pham/luoi-thep-han
 match = -146.7%%
 title = CHILLIapartamenty - Polanki Aqua D212 - BAŁTYCKI
 url = https://www.booking.com/hotel/pl/chilliapartamenty-polanki-aqua-d212-baltycki.vi.html&
+
+[hcmyu.hpu2.edu.vn]
+match = -253.3%%
+title = Câu lạc bộ Bóng đá: “Sáng lên giảng đường, chiều ra sân bóng”
+url = https://hcmyu.hpu2.edu.vn/cau-lac-bo-bong-da-sang-len-giang-duong--chieu-ra-san-bong.html
+
+[www.vietnamairport.vn]
+match = -213.3%%
+title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt ...
+url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/so-do-nha-ga-2
 
