--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-08-01 23:25:14
+lastsearch = 2024-08-02 01:30:16
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -100,4 +100,9 @@ url = https://vuanem.com/blog/drap-giuong-thang-loi.html
 match = 40.0%%
 title = Nệm Cao Su Non Thắng Lợi 1m8 x 2m
 url = https://demgiare.net/nem-cao-su-non-thang-loi-1m8-x-2m.html
+
+[changagoidemsonghong.com]
+match = -16.0%%
+title = Chăn ga gối cao cấp Urban mã UC23-035
+url = https://changagoidemsonghong.com/chan-ga-goi-uc035
 
