--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-02 00:19:22
+lastsearch = 2024-08-02 01:28:08
 
 [dongagroup.vn]
 match = -272.7%%
 title = Hơn 26 mẫu giường ngủ 2m giá rẻ | giao hàng tận nhà
-url = https://dongagroup.vn/noi-that-phong-ngu/giuong-ngu/2m-162.html?srsltid=AfmBOopEiSVuVDul97Sil1taaN7E8iQsjnAg5_sYrcETCQt1b5kl4Lef
+url = https://dongagroup.vn/noi-that-phong-ngu/giuong-ngu/2m-162.html
 
 [phana.com.vn]
 match = -63.6%%
