--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-08-01 22:16:13
+lastsearch = 2024-08-02 01:18:14
 
 [www.bible.com]
-match = -157.1%%
-title = EZEKIELA 16 | MIZOVBSI Bible | YouVersion
-url = https://www.bible.com/bible/253/EZK.16.MIZOVBSI
+match = -128.6%%
+title = MARKA 16 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/MRK.16.MIZCLBSI
 
 [tiki.vn]
 match = -171.4%%
@@ -22,9 +22,9 @@ title = Mùng chụp tự bung F1 - màu trắng
 url = https://mungmocmien.com/products/nhan-ban-tu-mung-chup-tu-bung-f1-mau-xanh
 
 [munghoangphat.com]
-match = -21.4%%
-title = màn chụp đỉnh vuông tự bung
-url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
+match = -135.7%%
+title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
 
 [manthutrang.com]
 match = -207.1%%
@@ -127,9 +127,9 @@ title = Mùng Chụp tự bung Xếp Gọn cỡ Lớn nhiều size
 url = https://thongminhtienich.vn/mung-chup-tu-bung-xep-gon-co-lon-nhieu-size/
 
 [m.facebook.com]
-match = -264.3%%
-title = 3-5 France in semi final an lut a, Ronaldo leh a pawlte ...
-url = https://m.facebook.com/inkhel/photos/breaking-semi-final-ah-france-portugal-0-0-france-aetpenalty-shoot-out-3-5france/877393687765060/
+match = -242.9%%
+title = MotoGP - The iconic sun and moon ☀️🌙 A fantastic tribute ...
+url = https://m.facebook.com/MotoGP/photos/the-iconic-sun-and-moon-️a-fantastic-tribute-to-one-of-valentino-rossi-vr46-offi/900509632110223/
 
 [tbmart.vn]
 match = -21.4%%
