--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-08-01 20:54:18
+lastsearch = 2024-08-02 01:20:39
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -82,9 +82,9 @@ title = Khăn rối mặt gấu kèm lục lạc, gặm nướu (Xanh dương)
 url = https://concung.com/do-choi-em-be/khan-roi-mat-gau-kem-luc-lac-gam-nuou-xanh-duong-55669.html
 
 [shopee.vn]
-match = -37.5%%
-title = Xả kho Chiếu Cỏ Bàng/ Chiếu Lác
-url = https://shopee.vn/Xả-kho-Chiếu-Cỏ-Bàng-Chiếu-Lác-Thảm-cỏ-Bàng-Đệm-Cỏ-Bàng-loại-1-đan-thủ-công-i.62836790.3559576532
+match = -18.8%%
+title = Chiếu lác thiên nhiên : 1m6 .1m8
+url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.conggiao.org]
 match = -68.8%%
