--- a/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
+++ b/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-dreamland-uc-160x200x10-xuat-khau.html
 lastopen = 2024-06-07 00:26:46
 
 [search]
-lastsearch = 2024-08-01 20:56:22
+lastsearch = 2024-08-02 01:16:28
 
 [demdreamland.vn]
 match = 25.6%%
@@ -14,7 +14,7 @@ url = https://demdreamland.vn/dem-cao-su-nhap-khau-dreamland-natural-latex/
 [demxanh.com]
 match = 46.5%%
 title = Đệm cao su Dreamland Natural Latex chính hãng
-url = https://demxanh.com/dem-cao-su-dreamland-natural-latex.html?srsltid=AfmBOoqBzIXCe-CN5GMqLXkDWc2Irqj_zGHUscKfDAkbPt24mBV5Dqnm
+url = https://demxanh.com/dem-cao-su-dreamland-natural-latex.html
 
 [www.diepxuan.com]
 match = -277.8%%
@@ -29,7 +29,7 @@ url = http://dreamland.vn/Dem-cao-su-Thien-Nhien-Hoang-Gia---16cm-i4417.html
 [demviethome.vn]
 match = 7.0%%
 title = Đệm cao su Kim Cương princess diamond luxury giá rẻ hà ...
-url = https://demviethome.vn/dem-cao-su-kim-cuong-princess-diamond-luxury/?srsltid=AfmBOooCtIYCZa5NXcNsLC62aPwCYNjK6XDy5cat_sV1t3UTSzuQ3vNm
+url = https://demviethome.vn/dem-cao-su-kim-cuong-princess-diamond-luxury/
 
 [thegioidemdep.com]
 match = 7.0%%
