--- a/images/nem-everon-160x200x14/config.ini
+++ b/images/nem-everon-160x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-160x200x14.html
 lastopen = 2024-06-06 17:09:53
 
 [search]
-lastsearch = 2024-08-01 23:51:06
+lastsearch = 2024-08-02 01:24:25
 
 [everon.vip]
 match = -10.0%%
@@ -64,7 +64,7 @@ url = https://everon.com.vn/size/160-x-200/
 [demxanh.com]
 match = -123.8%%
 title = [Cập nhật] Bảng giá đệm bông ép Elan khuyến mại năm ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-elan-2021.html?srsltid=AfmBOoosOBpi6AvafZRPRHRCyK9RNvHwUcubRyT5u00_bLHEef6-OKy6
+url = https://demxanh.com/bang-gia-dem-bong-ep-elan-2021.html
 
 [www.diepxuan.com]
 match = -10.0%%
