--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-08-01 22:54:04
+lastsearch = 2024-08-02 01:19:39
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -14,7 +14,7 @@ url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 [demxanh.com]
 match = 29.8%%
 title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
-url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html?srsltid=AfmBOorgHFZs8p7y40C6dzwCcu6ybUh5JiOnhms43PZL5pPA96-nf01g
+url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -29,7 +29,7 @@ url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 [everon.com.vn]
 match = 23.4%%
 title = ĐỆM LÒ XO KINGKOIL (MỸ) Showroom Chăn Ga Gối đệm ...
-url = https://everon.com.vn/kingkoil/?srsltid=AfmBOooi9RKMCAgQ4p319UDynuuhbD2DxerD6kFuFh60CV7yyPMnjnex
+url = https://everon.com.vn/kingkoil/
 
 [sieuthidemhanquoc.com.vn]
 match = 33.3%%
@@ -49,7 +49,7 @@ url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.h
 [www.diepxuan.com]
 match = 13.5%%
 title = Nệm everhome TC 15F 16 20 - Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html?srsltid=AfmBOooUTK_YtcgvL_HNXSdm8uvqKK9BpHl59Ak2RBtDo5c7oj6tuNC0
+url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
 
 [everon.online]
 match = 31.9%%
