CI images update

--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-08-01 23:39:53
+lastsearch = 2024-08-02 01:33:37
 
 [demxanh.com]
-match = 43.5%%
-title = Chiếu điều hòa Nhật Bản
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban.html
+match = -3.3%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [suongtuyet.com]
 match = -13.3%%
@@ -23,7 +23,7 @@ url = https://shopee.vn/list/chiếu điều hòa
 
 [goni.vn]
 match = 26.7%%
-title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
+title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [tiki.vn]
@@ -67,9 +67,9 @@ title = 10+ mẫu chiếu điều hoà hot nhất năm
 url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
 
 [xn--nekiovitnam-y69e.vn]
-match = 0.0%%
-title = Các loại chiếu điều hòa thông dụng, lưu ý khi lựa chọn
-url = https://xn--nekiovitnam-y69e.vn/cac-loai-chieu-dieu-hoa-thong-dung-luu-y-khi-lua-chon/
+match = 3.3%%
+title = Bảng giá chiếu mây điều hòa 2024 - Nekio Việt Nam
+url = https://xn--nekiovitnam-y69e.vn/bang-gia-chieu-may-dieu-hoa-2023/
 
 [chiaki.vn]
 match = 6.7%%
