--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-08-02 01:31:16
 [everon.com.vn]
 match = 14.8%%
 title = Bộ Chăn Ga Everon EPM 22063
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/?srsltid=AfmBOoqJERVxM3CQ-1o84MxgMGiyGzX7jpJ8YPcV2K6QPNKVuJAcoEsR
 
 [everon.online]
 match = -5.0%%
@@ -29,7 +29,7 @@ url = https://www.everonvn.vn/chi-tiet/everon-epm24063.html
 [demxanh.com]
 match = 30.6%%
 title = Bộ chăn ga gối Everon modal EPM22063
-url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html
+url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html?srsltid=AfmBOoqMUbjcqB_nIWYXX4E6i8DDsjzoT30hPTocnbbkMQq2lkyK0NOI
 
 [www.diepxuan.com]
 match = 100.0%%
